--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.5.2",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
     "line-awesome": "^1.3.0",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -22,7 +24,7 @@
     "sass": "^1.54.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.4",
+    "@types/glidejs__glide": "^3.4.2",
     "@types/node": "18.7.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -30,7 +32,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
