--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "3.1.6",
     "typescript": "4.7.4"
   }
 }
